--- a/assets/scss/components/_buttons.scss
+++ b/assets/scss/components/_buttons.scss
@@ -68,7 +68,7 @@ pre {
   right: 0.25rem;
   top: 0.25rem;
   z-index: 10;
-  font-family: $font-family-sans-serif;
+  font-family: $font-family-th-serif;
   font-size: $font-size-sm;
   padding: 0.25rem 0.5rem;
   color: $color-btn-text;
@@ -111,6 +111,7 @@ pre {
   content: "Copy";
   display: block;
   color: $color-btn-text;
+
 }
 
 .btn-copy:hover::after {
@@ -159,7 +160,7 @@ pre {
 }
 
 .btn-toggle[aria-expanded="true"] {
-  color: $body-color;
+  color: $link-color;
 }
 
 .btn-toggle[aria-expanded="true"]::before {
