--- a/layouts/partials/footer/footer.html
+++ b/layouts/partials/footer/footer.html
@@ -1,11 +1,13 @@
 <footer class="footer text-muted">
   <div class="container-{{ if .Site.Params.options.fullWidth }}fluid{{ else }}xxl{{ end }}">
     <div class="row">
-      <div class="col-lg-8 order-last order-lg-first">
+      <div class="col-xs-12 center-block text-center">
+      <!-- <div class="col-lg-8 order-last order-lg-first"> -->
         <ul class="list-inline">
-          <li class="list-inline-item">{{ .Site.Params.footer | safeHTML }}</li>
+          <li class="list-inline-item">{{ .Site.Params.copyright | safeHTML }} {{.Site.Params.footer | safeHTML }}</li>
         </ul>
       </div>
+      <!-- <div class="col-xs-12 center-block text-center"> -->
       <div class="col-lg-8 order-first order-lg-last text-lg-end">
         <ul class="list-inline">
           {{ range .Site.Menus.footer -}}
