--- a/layouts/partials/header/header.html
+++ b/layouts/partials/header/header.html
@@ -10,10 +10,12 @@
 
 <header class="navbar navbar-expand-lg navbar-light doks-navbar">
   <nav class="container-{{ if .Site.Params.options.fullWidth }}fluid{{ else }}xxl{{ end }} flex-wrap flex-lg-nowrap" aria-label="Main navigation">
-
-    <a class="navbar-brand order-0" href="{{ .Site.BaseURL | relLangURL }}" aria-label="{{ .Site.Params.Title }}">
-      {{ .Site.Params.Title }}
-    </a>
+    <a class="navbar-brand" href="#">
+      <img src="https://raw.githubusercontent.com/mdesignlab/mdesignlab.github.io/main/static/m_design_logo.png?token=GHSAT0AAAAAACFF3KAODDO5RIGLL45KTU2WZFVK6AQ">
+     </a>
+    <!-- <a class="navbar-brand order-0" href="{{ .Site.BaseURL | relLangURL }}" aria-label="{{ .Site.Params.Title }}">
+       {{ .Site.Params.Title }}
+    </a> -->
 
     {{ if (in .Site.Params.sections.sectionNav .Section) -}}
     <button class="btn btn-link order-0 ms-auto d-lg-none" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasExample" aria-controls="offcanvasExample">
