--- a/assets/scss/common/_variables.scss
+++ b/assets/scss/common/_variables.scss
@@ -26,9 +26,13 @@ $pink-500: #d32e9d;
 
 $primary: $red;
 
-$color-btn-bg: $pink-500;
-$color-btn-border: darken($pink-500, 5%);
-$color-btn-text: $red;
+$color-btn-bg: $primary;
+$color-btn-border: darken($primary, 5%);
+$color-btn-text: $white;
+$color-btn-copy-bg: $gray-600;
+$color-btn-copy-border: darken($gray-600, 5%);
+$color-btn-copy-text: $white;
+
 
 // Options
 //
@@ -112,7 +116,7 @@ $font-family-monospace:       sfmono-regular, menlo, monaco, consolas, "Liberati
 $font-family-base:            $font-family-th-serif;
 // stylelint-enable value-keyword-case
 
-$font-size-base:              1rem; // Assumes the browser default, typically `16px`
+$font-size-base:              0.93rem; // Assumes the browser default, typically `16px`
 $font-size-xl:                $font-size-base * 1.375;
 $font-size-lg:                $font-size-base * 1.25;
 $font-size-md:                $font-size-base * 1.125;
