--- a/assets/scss/layouts/_header.scss
+++ b/assets/scss/layouts/_header.scss
@@ -291,6 +291,7 @@ button#doks-versions {
 */
 
 /*! purgecss start ignore */
+/*
 .algolia-autocomplete {
   display: flex !important;
 }
@@ -333,9 +334,8 @@ button#doks-versions {
   margin-right: 0.5rem;
   margin-bottom: 0.5rem;
 }
-
+*/
 /*! purgecss end ignore */
-
 /*
  * Source: https://medium.com/creative-technology-concepts-code/responsive-mobile-dropdown-navigation-using-css-only-7218e4498a99
 */
