--- a/layouts/index.html
+++ b/layouts/index.html
@@ -23,34 +23,34 @@
       <div class="row justify-content-center text-center">
         <div class="col-lg-5">
           <h2 class="h4">Self-consistent</h2>
-          <p> XX </p>
+          <p> Neque porro quisquam est qui dolorem ipsum </p>
           <!-- <p>Get A+ scores on <a href="https://observatory.mozilla.org/analyze/doks.netlify.app">Mozilla Observatory</a> out of the box. Easily change the default Security Headers to suit your needs.</p> -->
         </div>
         <div class="col-lg-5">
           <h2 class="h4">Computationally Efficient</h2>
-          <p> XX </p>
+          <p> Lorem ipsum dolor sit amet </p>
           <!-- <p>Get 100 scores on <a href="https://googlechrome.github.io/lighthouse/viewer/?gist=59aafe464a68f8bc30b8e9a636d5b053">Google Lighthouse</a> by default. Doks removes unused css, prefetches links, and lazy loads images.</p> -->
         </div>
         <div class="col-lg-5">
           <h2 class="h4">Transferable Potentials</h2>
-          <p> XX </p>
+          <p> Aliquam aliquet purus a tempus suscipit </p>
           <!-- <p>Use sensible defaults for structured data, open graph, and Twitter cards. Or easily change the SEO settings to your liking.</p> -->
         </div>
       </div>
       <div class="row justify-content-center text-center">
         <div class="col-lg-5">
           <h2 class="h4">Chemically Accurate</h2>
-          <p> XX </p>
+          <p> Cras placerat mi sit amet pretium faucibus </p>
           <!-- <p>Search your Doks site with FlexSearch. Easily customize index settings and search options to your liking.</p> -->
         </div>
         <div class="col-lg-5">
           <h2 class="h4">Easy Extension</h2>
-          <p> XX </p>
+          <p> Vestibulum ut nibh sed mauris congue porta a ut tortor </p>
           <!-- <p>Switch to a low-light UI with the click of a button. Change colors with variables to match your branding.</p> -->
         </div>
         <div class="col-lg-5">
           <h2 class="h4">On-hand Information</h2>
-          <p> XX </p>
+          <p> Vestibulum accumsan nibh non erat semper, in euismod diam ornare </p>
           <!-- <p>Switch to a low-light UI with the click of a button. Change colors with variables to match your branding.</p> -->
         </div>
 
